# autograder

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  API_QUICK_REFERENCE.md  API_TEST_SUITE_GUIDE.md  ARCHITECTURE_REFACTORING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.actions  Dockerfile.api  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  REFACTOR_EXAMPLES.md  REFACTOR_SUMMARY.md  SECURITY.md  START_HERE.md  SUPPORT.md  action.yml  ai-feedback.json  alembic.ini  auto_fix_all.py  autograder.py  critera_schema.json  criteria.json  dev-test.py  docker-compose-dev.yaml  docker-compose.yaml  docker-compose.yml  entrypoint-dev.sh  entrypoint.sh  envfile.txt  fatal_analysis.py  feedback.json  fix_code_quality.py  (+18 more)
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-proposal.yml  hypothesis-rfc.yml  implementation-task.yml  umbrella-initiative.yml
.github/workflows/: deploy.yml  docs-pages.yml  pylint.yml  pytest.yml  validate-docs.yml
autograder/: __init__.py  autograder.py  autograder_facade.py  context.py  pipeline.py  tree_builder.py
autograder/builder/: pre_flight.py  tree_builder.py
autograder/core/: autograder_facade.py  decorators.py
autograder/graders/: criteria_tree.py
autograder/models/: criteria_tree.py  pipeline_execution.py  result_tree.py
autograder/parsers/: criteria_tree.py
autograder/request_bucket/: README.txt
autograder/serializers/: pipeline_execution_serializer.py
autograder/services/: command_resolver.py  criteria_tree_service.py  focus_service.py  grader_service.py  pre_flight_service.py  sandbox_service.py  template_library_service.py  upstash_driver.py
autograder/steps/: ai_batch_step.py  build_tree_step.py  export_step.py  feedback_step.py  focus_step.py  grade_step.py  load_template_step.py  pre_flight_step.py  sandbox_step.py  step_registry.py  structural_analysis_step.py
autograder/template_library/: __init__.py  api_testing.py  essay_grader.py  input_output.py  web_dev.py
autograder/translations/: __init__.py  en.json  pt_br.json  translator.py
autograder/utils/: collector.py  feedback_generator.py  feedback_parser.py  path.py  secrets_fetcher.py
autograder/validation/: README.txt  fatal_analysis.py
connectors/: api_connector.py  github_connector.py  port.py
connectors/models/: assignment_config.py  assignment_files.py  autograder_request.py  custom_assignment_config.py  preset.py  test_files.py
connectors/utils/: load_preset.py
core/: final_scorer.py  result_processor.py
core/config_processing/: ai_config.py  config.py  sub_test_config.py  test_config.py
core/grading/: base_grader.py  grader.py  json_result_grader.py  pytest_grader.py  subject_grader.py
core/redis/: upstash_driver.py
core/report/: ai_reporter.py  base_reporter.py  default_reporter.py  report_generator.py  reporter.py
docs/: API.md  COMPLETE_SYSTEM_DOCUMENTATION.md  DOCUMENTATION_MODERNIZATION_ROADMAP.md  LANGUAGE_SPECIFIC_SETUP_CONFIG.md  NEW_FEATURES.md  QUICK_REFERENCE.md  README  README.md  SETUP_CONFIG_QUICK_START.md  VISUAL_DIAGRAMS.md  configuration_examples.md  core_concepts.md  core_structures.md  criteria_example.json  deliberate_code_execution.md  getting_started.md  github_module.md  index.md  multi_language_support.md  pipeline_execution_tracking.md  setup_config_feature.md  system_architecture.md  web_module.md
docs/architecture/: core_structures.md  pipeline_execution_tracking.md  sandbox_manager.md  web_module.md
docs/configuration/: setup_config.md
examples/: README.md  test_single_submission.sh
fatal_detector/: fatal_analysis.py  fatal_tests.py
github_action/: .env  Dockerfile.actions  cloud_client.py  cloud_exporter.py  entrypoint.sh  github_action_service.py  github_classroom_exporter.py  main.py
grading/: final_scorer.py  grader.py
helpers/: clean.py  fill.py
report/: agent.py  example-of-agent-response.md  report_generator.py  result_exporter.py
sandbox_manager/: language_pool.py  manager.py  sandbox_container.py
scripts/: test_structural_analysis_live.py  validate_docs.py
systemTests/: test_Config.py  test_Grader.py  test_Scorer.py  test_SubTestConfig.py  test_SubjectGrader.py  test_TestConfig.py
template_library/: web_dev.py
tests/: ASSET_MIGRATION_SUMMARY.md  config.js  conftest.py  playroom.py  readme.md  request-config.js  result-parser.py  result_parser.py  setup.js  test-results.json  test_base.js  test_base.py  test_bonus.js  test_bonus.py  test_css.py  test_html.py  test_js.py  test_penalty.js  test_penalty.py  test_pipeline_modes.py  validate_assets.py  validate_multi_language_feature.py
utils/: collector.py  commit_report.py  config_loader.py  feedback_parser.py  path.py  report_generator.py  result_exporter.py  secrets_fetcher.py
web/: README.md  alembic.ini  main.py
(+441 files in other folders)
